Fix schema wrapper text align

--- a/app/assets/stylesheets/partials/layout/_main.scss
+++ b/app/assets/stylesheets/partials/layout/_main.scss
@@ -53,6 +53,9 @@ body {
 //schemas
 .schema-wrapper {
     text-align: center;
+    &.text-left {
+        text-align: left;
+    }
 }
 
 .schema-box-container {
